# tbai_ros

./: .gitignore  .gitmodules  CREDITS.md  README.md  justfile  pixi.toml
tbai_ros_anymal_d/: CMakeLists.txt  package.xml
tbai_ros_anymal_d/config/: deploy_anymal_b_mpc.yaml  deploy_anymal_c_mpc.yaml  deploy_anymal_d_bob.yaml  deploy_anymal_d_bob_perceptive.yaml  deploy_anymal_d_dtc_blind.yaml  deploy_anymal_d_dtc_perceptive.yaml  deploy_anymal_d_joe.yaml  deploy_anymal_d_mpc.yaml
tbai_ros_anymal_d/launch/: anymal_b_mpc_mujoco.launch  anymal_c_mpc_mujoco.launch  anymal_d_bob_mujoco.launch  anymal_d_bob_perceptive_mujoco.launch  anymal_d_dtc_blind_mujoco.launch  anymal_d_dtc_perceptive_mujoco.launch  anymal_d_joe_mujoco.launch  anymal_d_mpc_mujoco.launch
tbai_ros_anymal_d/src/: deploy_anymal_d_bob.cpp  deploy_anymal_d_dtc.cpp  deploy_anymal_d_joe.cpp  deploy_anymal_d_mpc.cpp
tbai_ros_controllers/tbai_ros_bob/: CMakeLists.txt  README.md  package.xml
tbai_ros_controllers/tbai_ros_bob/config/: config_anymal_d_blind.yaml  config_anymal_d_perceptive.yaml  config_go2_blind.yaml  config_go2_no_vel_blind.yaml  config_go2_no_vel_noise_blind.yaml
tbai_ros_controllers/tbai_ros_bob/launch/: anymal_d_mapping.launch
tbai_ros_controllers/tbai_ros_bob/src/: BobController.cpp  Visualizers.cpp  simple_perceptive.cpp
tbai_ros_controllers/tbai_ros_dtc/: CMakeLists.txt  README.md  package.xml
tbai_ros_controllers/tbai_ros_dtc/config/: default_config_blind.yaml
tbai_ros_controllers/tbai_ros_dtc/src/: RosDtcController.cpp  simple.cpp
tbai_ros_controllers/tbai_ros_joe/: CMakeLists.txt  README.md  package.xml
tbai_ros_controllers/tbai_ros_joe/src/: RosJoeController.cpp  simple.cpp
tbai_ros_controllers/tbai_ros_mpc/: CMakeLists.txt  README.md  package.xml
tbai_ros_controllers/tbai_ros_mpc/launch/: anymal_b_blind.launch  anymal_c_blind.launch  anymal_d_blind.launch  anymal_d_perceptive.launch  franka.launch  go2_blind.launch  spot_arm_blind.launch  spot_blind.launch
tbai_ros_controllers/tbai_ros_mpc/rviz/: arm.rviz
tbai_ros_controllers/tbai_ros_np3o/: CMakeLists.txt  README.md  package.xml
tbai_ros_controllers/tbai_ros_np3o/config/: default_config_go2.yaml
tbai_ros_controllers/tbai_ros_np3o/src/: Np3oController.cpp  Visualizers.cpp  simple.cpp
tbai_ros_controllers/tbai_ros_static/: CMakeLists.txt  README.md  package.xml
tbai_ros_controllers/tbai_ros_static/config/: default_config_anymal_d.yaml  default_config_franka.yaml
tbai_ros_controllers/tbai_ros_static/src/: StaticController.cpp  simple.cpp
tbai_ros_core/: CMakeLists.txt  package.xml
tbai_ros_core/include/tbai_ros_core/: StateVisualizer.hpp  Subscribers.hpp
tbai_ros_core/src/: StateVisualizer.cpp  Subscribers.cpp  tbai_ros_core.cpp
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/: CMakeLists.txt
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/launch/: deploy_go2_mpc.launch  visualize_go2.launch
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/src/: deploy_go2_mpc.cpp  go2_joystick_node.cpp
tbai_ros_descriptions/: .gitignore  CMakeLists.txt  fix_urdf_paths.cmake  package.xml
tbai_ros_docs/: package.xml
tbai_ros_examples/tbai_ros_anymal_b_mujoco/: CMakeLists.txt  package.xml
tbai_ros_examples/tbai_ros_anymal_b_mujoco/launch/: anymal_b_mpc_mujoco.launch
tbai_ros_examples/tbai_ros_anymal_b_mujoco/src/: deploy_anymal_b_mpc.cpp
tbai_ros_examples/tbai_ros_anymal_c_mujoco/: CMakeLists.txt  package.xml
tbai_ros_examples/tbai_ros_anymal_c_mujoco/config/: deploy_anymal_c_mpc.yaml
tbai_ros_examples/tbai_ros_anymal_c_mujoco/launch/: anymal_c_mpc_mujoco.launch
tbai_ros_examples/tbai_ros_anymal_c_mujoco/src/: deploy_anymal_c_mpc.cpp
tbai_ros_examples/tbai_ros_anymal_d_mujoco/: CMakeLists.txt  package.xml
tbai_ros_examples/tbai_ros_anymal_d_mujoco/config/: deploy_anymal_d_bob_perceptive.yaml  deploy_anymal_d_dtc_perceptive.yaml  deploy_anymal_d_joe.yaml  deploy_anymal_d_mpc.yaml  deploy_anymal_d_mpc_perceptive.yaml  elevation_mapping_mujoco.yaml
tbai_ros_examples/tbai_ros_anymal_d_mujoco/launch/: anymal_d_bob_mujoco.launch  anymal_d_bob_perceptive_mujoco.launch  anymal_d_dtc_blind_mujoco.launch  anymal_d_dtc_perceptive_mujoco.launch  anymal_d_joe_mujoco.launch  anymal_d_mpc_mujoco.launch  anymal_d_mpc_perceptive_mujoco.launch
tbai_ros_examples/tbai_ros_anymal_d_mujoco/src/: deploy_anymal_d_bob.cpp  deploy_anymal_d_dtc.cpp  deploy_anymal_d_joe.cpp  deploy_anymal_d_mpc.cpp
tbai_ros_examples/tbai_ros_franka_mujoco/: CMakeLists.txt  package.xml
tbai_ros_examples/tbai_ros_franka_mujoco/config/: deploy_franka.yaml
tbai_ros_examples/tbai_ros_franka_mujoco/launch/: franka_mujoco.launch
tbai_ros_examples/tbai_ros_franka_mujoco/src/: deploy_franka.cpp
tbai_ros_examples/tbai_ros_g1_mujoco/: CMakeLists.txt  package.xml
tbai_ros_examples/tbai_ros_g1_mujoco/config/: g1_rl.yaml
tbai_ros_examples/tbai_ros_g1_mujoco/launch/: g1_mujoco.launch
tbai_ros_examples/tbai_ros_g1_mujoco/src/: G1ASAPController.cpp  G1ASAPMimicController.cpp  G1BeyondMimicController.cpp  G1MimicController.cpp  G1PBHCController.cpp  G1RLController.cpp  G1SpinkickController.cpp  G1Twist2Controller.cpp  deploy_g1_rl.cpp
tbai_ros_examples/tbai_ros_go2_mpc_mujoco/: CMakeLists.txt  README.md  package.xml
tbai_ros_examples/tbai_ros_go2_mpc_mujoco/config/: controllers.info  deploy_go2_mpc.yaml  gait.info  (+2 more)
tbai_ros_examples/tbai_ros_go2_rl_mujoco/: CMakeLists.txt  README.md  package.xml
tbai_ros_g1/: CMakeLists.txt
tbai_ros_g1/config/: Untitled  g1_rl.yaml
tbai_ros_g1/launch/: g1_mujoco.launch
tbai_ros_g1/scripts/: convert_twist2_pkl_to_csv.py  g1_virtual_joystick.py
tbai_ros_g1/src/: G1ASAPController.cpp  G1ASAPMimicController.cpp  G1BeyondMimicController.cpp  G1PBHCController.cpp  G1SpinkickController.cpp  G1Twist2Controller.cpp  G1TwistController.cpp  deploy_g1_rl.cpp
tbai_ros_go2w/: CMakeLists.txt
tbai_ros_go2w/launch/: go2w_gazebo_drive.launch  go2w_gazebo_handstand.launch  go2w_mujoco_drive.launch  go2w_mujoco_handstand.launch
tbai_ros_go2w/src/: deploy_go2w_dreamwaq.cpp
tbai_ros_mujoco/: CMakeLists.txt  package.xml
(+226 files in other folders)
