<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_anymal_d</name>
  <version>0.1.0</version>
  <description>TBAI ROS deployment for ANYmal D (MuJoCo)</description>
  <maintainer email="todo@todo.com">tbai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_reference</depend>
  <depend>tbai_ros_mpc</depend>
  <depend>tbai_ros_bob</depend>
  <depend>tbai_ros_dtc</depend>
  <depend>tbai_ros_joe</depend>
  <depend>tbai_ros_ocs2</depend>
  <depend>xacro</depend>
  <depend>topic_tools</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
</package>
