<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_core</name>
  <version>0.0.0</version>
  <description>The tbai_ros_core package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>