<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_mujoco</name>
  <version>0.1.0</version>
  <description>MuJoCo simulator bridge for tbai</description>
  <maintainer email="lnotspotl@gmail.com">tbai</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tbai_descriptions</depend>
</package>
