<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_joe</name>
  <version>0.0.0</version>
  <description>The tbai_ros_joe package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_msgs</depend>
  <depend>tbai_ros_reference</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_gridmap</depend>
  <depend>tbai_ros_ocs2</depend>
  <depend>tbai_ros_mpc</depend>
  <depend>tbai</depend>

  <export>
  </export>
</package>