<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_mpc</name>
  <version>0.0.0</version>
  <description>The tbai_ros_mpc package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_msgs</depend>
  <depend>tbai_ros_ocs2</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>

  <depend>std_msgs</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_reference</depend>
  <depend>convex_plane_decomposition</depend>

  <export>
  </export>
</package>