<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_static</name>
  <version>0.0.0</version>
  <description>The tbai_ros_static package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_ros_core</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>geometry_msgs</depend>
  <depend>tbai</depend>
  <depend>tbai_descriptions</depend>
  <export>
  </export>
</package>