<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_franka_mujoco</name>
  <version>0.1.0</version>
  <description>TBAI ROS deployment for Franka Panda</description>
  <maintainer email="todo@todo.com">tbai</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_reference</depend>
  <depend>tbai_ros_mpc</depend>
  <depend>tbai_ros_descriptions</depend>
  <depend>xacro</depend>
</package>
