<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_g1_mujoco</name>
  <version>1.0.0</version>
  <description>TBAI ROS package for Unitree G1</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_msgs</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_reference</depend>
  <depend>tbai</depend>

  <export>
  </export>
</package>
